--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,12 @@ code {
   background-color: rgba(29,29,31,0.72);
   position: relative;
 }
+
+.grow { transition: all .2s ease-in-out; }
+.grow:hover { transform: scale(1.05); }
+
+.grow-10 { transition: all .2s ease-in-out; }
+.grow-10:hover { transform: scale(1.10); }
+
+.imgDarken { background-color: #000000 !important;}
+.imgDarken img { opacity: 0.2 !important; }
